syntax = "proto3";

option java_package = "com.astraios.grpc.common";
option java_multiple_files = true;
option go_package = "github.com/GUET-BAT/Astraios-S/common-service/pb/commonpb";

package common;

message LoadConfigRequest {
  string nacos_data_id = 1; // e.g. "nacos.common-service.core.config" (suffix defaults to .yaml)
}

message LoadConfigResponse {
  int32 code = 1; // 状态码，0表示成功
  string message = 2; // 状态消息
  string config = 3; // 配置内容，通常是JSON格式
}

service CommonService {
    rpc LoadConfig(LoadConfigRequest) returns (LoadConfigResponse);
}
